# table-snapshot

./: .editorconfig  .eslintrc.yml  .prettierrc.json  Makefile  compose.yaml  package-lock.json  package.json  tsconfig.json
.storybook/: main.ts  preview.ts
doc/: struct.puml
docker/mysql80/: create-table.sql
docker/mysql80/init.d/: a-number-tables.sql  b-date-tables.sql  d-json-tables.sql
docker/table-snapshot/init.d/: tables.sql
docker/testdata-mysql80/init.d/: 01-number-signed-create.sql  01-number-signed-insert.sql  02-number-unsigned-create.sql  02-number-unsigned-insert.sql  03-number-fixed-create.sql  03-number-fixed-insert.sql  04-number-float-create.sql  04-number-float-insert.sql  06-date-date-create.sql  (+26 more)
src/: App.tsx  global.scss  types.ts
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/src/: command.rs  database.rs  lib.rs  main.rs
src-tauri/src/command/: diff.rs  mod.rs  project.rs  snapshot.rs  state.rs
src-tauri/src/core/: connector.rs  mod.rs  types.rs
src-tauri/src/database/: base.rs  mysql.rs  types.rs
src-tauri/src/database/mysql/: base.rs  column.rs  parser.rs  query.rs
src-tauri/src/db/: diff.rs  mod.rs  project.rs  snapshot.rs
src-tauri/src/diff/: mod.rs  types.rs
src-tauri/src/domain/: diff.rs  mod.rs  project.rs  schema.rs  snapshot.rs
src-tauri/src/dump/: adapter.rs  mod.rs  mysql80.rs
src-tauri/src/dump/mysql/: column_parser.rs  mod.rs  schema_query.rs
src-tauri/src/dump/snapshot/: mod.rs
src/page/: ProjectCreatePage.tsx  ProjectListPage.tsx  ProjectUpdatePage.tsx
src/types/: Color.ts  Tmp.ts
(+74 files in other folders)
