[package]
name = "table-snapshot"
version = "0.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.68"
itertools = "0.10.5"
r2d2 = "0.8.6"
r2d2_mysql = "16.0.0"
mysql = "16.0.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
