[package]
name = "table-snapshot"
version = "0.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
anyhow = "1.0.68"
chrono = "0.4.26"
dialoguer = "0.10.4"
itertools = "0.10.5"
md5 = "0.7.0"
mysql = "16.0.0"
r2d2 = "0.8.6"
r2d2_mysql = "16.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.2", features = ["shell-open"] }
uuid = "1.3.3"

[features]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "component-generator"
path = "src/bin/component_generator.rs"
